dropshot/tests/fail/bad_channel9.stderr
error[E0277]: the trait bound `dropshot::Query<QueryParams>: RequestContextArgument` is not satisfied
  --> tests/fail/bad_channel9.rs:24:8
   |
24 |     _: Query<QueryParams>,
   |        ^^^^^ the trait `RequestContextArgument` is not implemented for `dropshot::Query<QueryParams>`
   |
   = help: the trait `RequestContextArgument` is implemented for `RequestContext<T>`

error[E0277]: the trait bound `dropshot::Query<QueryParams>: RequestContextArgument` is not satisfied
  --> tests/fail/bad_channel9.rs:19:1
   |
19 | / #[channel {
20 | |     protocol = WEBSOCKETS,
21 | |     path = "/test",
22 | | }]
   | |__^ the trait `RequestContextArgument` is not implemented for `dropshot::Query<QueryParams>`
   |
   = help: the trait `RequestContextArgument` is implemented for `RequestContext<T>`
   = note: this error originates in the attribute macro `channel` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn(dropshot::Query<QueryParams>, WebsocketUpgrade) -> impl Future<Output = Result<http::response::Response<Body>, HttpError>> {bad_channel_adapter}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_channel9.rs:23:1
   |
19 | / #[channel {
20 | |     protocol = WEBSOCKETS,
21 | |     path = "/test",
22 | | }]
   | |__- required by a bound introduced by this call
23 |   async fn bad_channel(
   |   ^^^^^ unsatisfied trait bound
   |
   = help: the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(dropshot::Query<QueryParams>, WebsocketUpgrade) -> impl Future<Output = Result<http::response::Response<Body>, HttpError>> {bad_channel_adapter}`
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |     pub fn new<HandlerType, FuncParams, ResponseType>(
   |            --- required by a bound in this associated function
...
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
